--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,7 +6,7 @@
         {
             "label": "Build python package & reinstall",
             "type": "shell",
-            "command": "rm -R dist & python3.11 -m build && pip uninstall -y grading && pip install dist/*.whl"
+            "command": "rm -R dist & python -m pip install build & python -m build && pipx uninstall grading && pipx install dist/*.whl"
         },
         {
             "label": "Tests",
