--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ name = grading
 version = 0.0.3
 aruthor= Fernando Muro
 author_email = fmuro@us.es
-description = rename PDFs according to a list of resembling names
+description = Fill grading spreadsheets from PDF file names
 license = GPL-3.0
 
 [options]
