--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = grading
-version = 0.0.3
+version = 0.0.4
 aruthor= Fernando Muro
 author_email = fmuro@us.es
 description = Fill grading spreadsheets from PDF file names
@@ -9,11 +9,11 @@ license = GPL-3.0
 [options]
 packages = grading
 install_requires =
-    libmatching @ git+https://github.com/FMuro/libmatching.git#egg=libmatching
+    matching @ git+https://github.com/FMuro/matching.git#egg=matching
 
 [options.entry_points]
 console_scripts =
-    grading = grading.grading:funcion
+    grading = grading.accion:grade_spreadsheet
 
 [options.package_data]
 grading = *
